lots of revision

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
          plan, and deliver design solutions. </p>
 
-        <p> <b>Today's machine is growing and so are we.</b> With a strong affinity for creating
-        products that bridge the gap between technology, education, and health, I hope to strategize
+        <p> <b>Today's technology is growing and so are we.</b> With a strong affinity for creating
+        products that bridge the gap between machine, education, environmental sustainability, and health/fitness, I hope to strategize
         simple, yet user-centric solutions to solve complex problems. Feel free to contact me right below!
      </div>
   </div>
