about me revised

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="hero_container">
     <h1> EKKALUX NGUYEN</h1>
     <p> I am a UX designer based in San Francisco passionate about  </p>
-    <p>creating beautiful and intuitive user experience. </p>
+    <p>creating <b>beautiful</b> and <b>intuitive</b> user experience. </p>
 
     <div class="middle_button_container">
       <button class="button">About Me</button>
@@ -110,11 +110,14 @@
          want to just design; I wanted to use my passion in design to help people with their problems and see the
          positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
          intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
-         plan, and deliver design solutions. </p>
+         plan, and deliver design solutions. With the growing technology today, I have a strong affinity to strategize
+         simple, yet user-centric solutions to products that bridge the gap between machine, education, environmental sustainability, and health/fitness.</p>
 
-        <p> <b>Today's technology is growing and so are we.</b> With a strong affinity for creating
-        products that bridge the gap between machine, education, environmental sustainability, and health/fitness, I hope to strategize
-        simple, yet user-centric solutions to solve complex problems. Feel free to contact me right below!
+
+        <p> <b>What am I currently doing?</b> I am still enrolled in the online part-time UI/UX bootcamp, prospecting to complete the program
+          in the next three months.  When I'm not working on UX related projects,
+          I enjoy hiking, traveling, hitting the gym, or catching up on Game of Thrones. Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
+          ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
      </div>
   </div>
 </section>
